--- a/assignment3/assignment3.vcxproj
+++ b/assignment3/assignment3.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="Drawing.h" />
     <ClInclude Include="Lane.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TrafficLight.h" />
